# nevronets

./: LICENSE  README.md
docs/rrose/: neuro.mdl
src/: CMakeLists.txt
src/ga/: 1x_pga.h  CMakeLists.txt  Displaying.h  GenAlgMPI.dsp  GenAlgMPI.dsw  GenAlgorithm.h  Genotype.h  Individual.h  LibRand.cpp  LibRand.h  NaturalHabitat.h  Population.h  RandGen.h  main.cpp  makefile
src/pneuro/: CMakeLists.txt  activafunc.cpp  activafunc.h  gsettings.h  nn1x.h  nnForwardPropagation.h  nnGATraining.h  nnIncompleteConnected.h  nnTraining.h  nnifc.cpp  nnifc.h  nnlayer.cpp  nnlayer.h
src/tests/: CMakeLists.txt  test-GA.cpp  test-incomplete.cpp  test-nnlayer.cpp  test-nnlayer.dsp  test-nnlayer.dsw  test-popsize.cpp  test-speed.cpp  test-splitinst.cpp
